fix: header shifting

--- a/src/components/Dashboard/MoodDashboard.css
+++ b/src/components/Dashboard/MoodDashboard.css
@@ -198,10 +198,6 @@
     max-width: 850px;
   }
 
-  .mood__dashboard_card-content {
-    height: 180px;
-    width: 240px;
-  }
   .mood__dashboard_card-moodnote {
     font-size: 14px;
     line-height: 17px;
@@ -221,8 +217,8 @@
   }
 
   .mood__dashboard_card-content {
-    height: 160px;
-    width: 100%;
+    height: 225px;
+    width: 301px;
     max-width: 220px;
   }
 
@@ -257,8 +253,8 @@
   }
 
   .mood__dashboard_card-content {
-    height: 160px;
-    width: 100%;
+    height: 225px;
+    width: 301px;
   }
 }
 
@@ -270,8 +266,8 @@
   }
 
   .mood__dashboard_card-content {
-    height: 190px;
-    width: 100%;
+    height: 225px;
+    width: 301px;
     max-width: 320px;
     margin: 0 auto;
   }
@@ -298,8 +294,8 @@
   }
 
   .mood__dashboard_card-content {
-    height: 180px;
-    max-width: 280px;
+    height: 225px;
+    width: 301px;
   }
   .mood__dashboard_card-moodnote {
     font-size: 14px;
@@ -315,11 +311,5 @@
   .mood__dashboard_load-more {
     width: 100%;
     max-width: 280px;
-  }
-}
-
-@media (min-width: 1440px) {
-  .mood__dashboard_grid {
-    max-width: 1200px;
   }
 }
